Related: tdf#150312 "Repair" broken table:base-cell-address of defined names

... to not lose them entirely, though this may shift relative
addressing, which may be equally bad because there is no
indication and can go unnoticed. Most defined ranges use absolute
addressing though and formula expressions are rarely affected.

Change-Id: If57ff9274e673a4eb43c656698f6ed43e8415458
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139706
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins